unpackaged/main/default/objects/Campaign/fields/Audience_Details__c.field-meta.xml
<CustomField>
    <fullName>Audience_Details__c</fullName>
    <label>Audience Details</label>
    <type>TextArea</type>
</CustomField>