unpackaged/main/default/objects/Campaign/fields/Bump_in_time__c.field-meta.xml
<CustomField>
    <fullName>Bump_in_time__c</fullName>
    <label>Bump in time</label>
    <type>DateTime</type>
</CustomField>