unpackaged/main/default/objects/Campaign/fields/Bump_out_Time__c.field-meta.xml
<CustomField>
    <fullName>Bump_out_Time__c</fullName>
    <label>Bump out Time</label>
    <type>DateTime</type>
</CustomField>