unpackaged/main/default/objects/Campaign/fields/Comes_from__c.field-meta.xml
<CustomField>
    <fullName>Comes_from__c</fullName>
    <label>Comes from</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROCHELLE</fullName>
            </value>
            <value>
                <fullName>JAMES</fullName>
            </value>
            <value>
                <fullName>LEIGH</fullName>
            </value>
            <value>
                <fullName>KARINA</fullName>
            </value>
            <value>
                <fullName>GEORGIE</fullName>
            </value>
            <value>
                <fullName>CONSOL</fullName>
            </value>
            <value>
                <fullName>CORPORATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>