unpackaged/main/default/objects/Campaign/fields/Discount_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_Start_Date__c</fullName>
    <label>Discount Start Date</label>
    <type>Date</type>
</CustomField>