unpackaged/main/default/objects/Campaign/fields/Location_Details__c.field-meta.xml
<CustomField>
    <fullName>Location_Details__c</fullName>
    <label>Location Details</label>
    <type>TextArea</type>
</CustomField>