unpackaged/main/default/objects/Campaign/fields/Messaging__c.field-meta.xml
<CustomField>
    <fullName>Messaging__c</fullName>
    <label>Messaging</label>
    <type>TextArea</type>
</CustomField>