unpackaged/main/default/objects/Campaign/fields/New_Existing__c.field-meta.xml
<CustomField>
    <fullName>New_Existing__c</fullName>
    <label>New/Existing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New/Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>