unpackaged/main/default/objects/Campaign/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Lead creation</fullName>
            </value>
            <value>
                <fullName>2. Lead progression</fullName>
            </value>
            <value>
                <fullName>3. Loyalty</fullName>
            </value>
            <value>
                <fullName>4. Awareness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>