unpackaged/main/default/objects/Campaign/fields/Planning_Status__c.field-meta.xml
<CustomField>
    <fullName>Planning_Status__c</fullName>
    <label>Planning Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To be confirmed</fullName>
            </value>
            <value>
                <fullName>Budget approval</fullName>
            </value>
            <value>
                <fullName>Region review</fullName>
            </value>
            <value>
                <fullName>Locked in</fullName>
            </value>
            <value>
                <fullName>Not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>