unpackaged/main/default/objects/Campaign/fields/Sponsorship_Type_Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Type_Inclusions__c</fullName>
    <label>Sponsorship Type/Inclusions</label>
    <type>TextArea</type>
</CustomField>