unpackaged/main/default/objects/Campaign/fields/Target_RSVP__c.field-meta.xml
<CustomField>
    <fullName>Target_RSVP__c</fullName>
    <formula>HierarchyNumberSent *  ExpectedResponse</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target RSVP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>