unpackaged/main/default/objects/Campaign/fields/Telemarketing_Involved__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechOne Direct Involved</label>
    <type>Checkbox</type>
</CustomField>