unpackaged/main/default/objects/Campaign/listViews/Activity_Promotion.listView-meta.xml
<ListView>
    <fullName>Activity_Promotion</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Month__c</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>AMOUNT_WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Promotion</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Not started,Locked In</value>
    </filters>
    <label>Activity - Promotion</label>
</ListView>