unpackaged/main/default/objects/Campaign/listViews/AMS_Consulting.listView-meta.xml
<ListView>
    <fullName>AMS_Consulting</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Application Managed Services,Consulting</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>notEqual</operation>
        <value>Training,Webinar - Training,Email - One off</value>
    </filters>
    <label>Industry - AMS &amp; Consulting</label>
</ListView>